@startuml
skinparam classAttributeIconSize 0
skinparam dpi 150

class ChatSDK
class LLMManager
class SessionManager
class DataManager
class LLMProvider
class DeepSeekProvider
class ChatGPTProvider
class GeminiProvider
class OllamaProvider
class Config
class APIConfig
class OllamaConfig
class Session
class Message

ChatSDK *-- LLMManager : owns
ChatSDK *-- SessionManager : owns
SessionManager *-- DataManager : owns
SessionManager *-- Session : manages
Session *-- "*" Message : contains

LLMManager --> LLMProvider : dispatches
DeepSeekProvider --|> LLMProvider
ChatGPTProvider --|> LLMProvider
GeminiProvider --|> LLMProvider
OllamaProvider --|> LLMProvider

Config <|-- APIConfig
Config <|-- OllamaConfig
ChatSDK ..> Config : initializeSDK(configs)
@enduml
